# sem6

./: .gitignore
mtrun/: .gitignore  1.lex  1.sh  Makefile  syntax.lex  syntax.yacc  test.py
mtrun/1/: 1.lex  1.sh  test.py
mtrun/2/: 2.lex  2.py  2.sh  2.yacc  test.py  tree.cpp  tree.h
mzi/: sha1.go
mzi/3/: sha1.go
mzi/4/: krb_models.go  krb_server.go
osis/: .gitignore  1.sh  2.sh  3.sed  3.sh  4.sh
osis/05/: Makefile
osis/06/: Makefile  sig.conf  sighand.c
osis/07/: pager.c
osis/08/: Makefile  shared-messanger.c
osis/09/: CMakeLists.txt  echo-server.cpp  tcpclient_sync.cpp
src/msi/1/: main.go
